Add[batch]: langs, settings
- Add: Donation section.
- Fix: delete db color in darkmode.
- UX: rename front-end use of "article" -> "text"
- Add: Icon to donate page.
- Fix: "articles" -> "texts"
- Update: icon.
- Add langs: pl, sv, nl

--- a/resources/public/css/custom.css
+++ b/resources/public/css/custom.css
@@ -9,3 +9,27 @@
   50% { opacity: 1 }
   80% {opacity: 1}
 }
+
+
+.tis-logo {
+  display: flex;
+  align-self: center;
+  width: 120px;
+  height: 120px;
+  background-image: url('../img/icons/tis_dark.png');
+  background-size:     cover;
+  background-repeat:   no-repeat;
+  background-position: center center;
+}
+@media(prefers-color-scheme: dark) {
+  .tis-logo {
+    width: 120px;
+    height: 120px;
+    background-image: url('../img/icons/tis_light.png');
+    background-size:     cover;
+    background-repeat:   no-repeat;
+    background-position: center center;
+
+  }
+  /* background-url:  */
+}
